--- a/TrabalhoReactVite/src/Inicio.module.css
+++ b/TrabalhoReactVite/src/Inicio.module.css
@@ -7,5 +7,9 @@
 }
 
 .Cabecalho{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
     padding-top: 100px;
 }
