--- a/TrabalhoReactVite/src/components/Menu.module.css
+++ b/TrabalhoReactVite/src/components/Menu.module.css
@@ -1,13 +1,23 @@
 .wrap-menu{
     background: var(--bg-secondary);
-    width: 100%;
-    height: 80px;
+    width: 15vw;
+    height: 750px;
     position: fixed;
     top: 0;
-    box-shadow: var(--color-shadow);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2vw;
+    gap: 18vh;
     z-index: 999;
+}
+
+.Abas-href{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 70px;
+    gap: 10vh;
+    
 }
