--- a/TrabalhoReactVite/src/Calc.module.css
+++ b/TrabalhoReactVite/src/Calc.module.css
@@ -1,23 +1,51 @@
+*{
+    
+}
+
 .wrapCalc{
-
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   margin-top: 5vh;
+   gap: 15vh;
 }
 
-.wrapInputsCalc{
-
+.H1{
+   gap: 10vh;
 }
+
 
 .inpStyle{
-
+    border: none;
+    border-radius: 999px;
+    padding: 7px 10px;
+    background-color: var(--bg-secondary);
+    color: #ffff;
+    gap: 10vw;
 }
 
 .wrapInputsCalc{
-
+    gap: 10vw;
 }
 
 .wrapMedia{
-
+    border: none;
+    padding: 10px 30px;
+    border-radius: 999px;
+    background-color: var(--bg-primary);
+    border: 1px solid var(--text-title);
+    color: var( --text-title);
+    transition: all 200ms ease-out;
+    background: none;
 }
 
 .wrapMedia:hover{
-    
+    box-shadow: var(--color-shadow);
+}
+
+.calc-btn{
+    background: none;
+    border: none;
+
 }
