--- a/TrabalhoReactVite/src/Cards.module.css
+++ b/TrabalhoReactVite/src/Cards.module.css
@@ -1,19 +1,42 @@
 .wrap-card{
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
 }
 
 .wrap-btn-card{
+    margin-top: 100px;
+    gap: 100vw;
 
 }
 
 .wrap-card-tid{
+    margin-top: 100px;
 
 }
 
 .btnCard{
+    gap: 10vw;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 999px;
+    background-color: var(--bg-primary);
+    border: 1px solid var(--text-title);
+    color: var( --text-title);
+    transition: all 200ms ease-out;
+}
 
+.all{
+    display: flex;
+    flex-direction: row;
 }
 
 .btnCard:hover{
-
+    border: 1px solid var(--text-p);
+    color: var(--text-p);
+    box-shadow: var(--color-shadow);
+    transition: all 200ms ease-in;
 }
